Arrumando um pequeno erro

--- a/atividade 1 Sa2/Pag1.html
+++ b/atividade 1 Sa2/Pag1.html
@@ -92,8 +92,8 @@
                 <div class="CardProdutosDestaque">
               <img class="img-destaques"  src="./images/headset.webp" alt=""   width="300px" >                                                 
                   <div class="infos">
-                      <p class="produto-info">Controle Joystick Xbox One</p>
-                  <p class="produto-preco">headset gamer </p>
+                           <p class="produto-info">headset gamer</p>
+                      <p class="produto-preco">Preço: 200,00 R$ </p>
                   </div>
   
                   <div class="bnt" >
